--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
     container_name: account
     depends_on:
       - postgres
+      - redis
     networks:
       - all_network
     ports:
