--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,11 +14,12 @@ services:
       - "5432:5432"
     networks:
       - all_network
-  frontend:
-    build: ./frontend/affiche/
-    container_name: frontend_c
-    ports: 
-      - '3000:3000'
+      
+  # frontend:
+  #   build: ./frontend/affiche/
+  #   container_name: frontend_c
+  #   ports: 
+  #     - '3000:3000'
 
   backend:
     build: ./backend/main_app
